--- a/src/app/components/learning-resource/learning-resource.component.html
+++ b/src/app/components/learning-resource/learning-resource.component.html
@@ -87,88 +87,78 @@
         <div class="row g-5">
             <div class="col-lg-8">
                 <!-- Blog Detail Start -->
-                <div class="mb-5">
-                    <img class="img-fluid w-100 rounded mb-5" src="../assets/img/blog-1.jpg" alt="">
-                    <h1 class="text-uppercase mb-4">Diam dolor est labore duo ipsum clita sed et lorem tempor duo</h1>
-                    <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut
-                        magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet
-                        amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing et at at
-                        sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et
-                        aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren
-                        sit stet no diam kasd vero.</p>
-                    <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores
-                        vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit
-                        nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et. Labore
-                        ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et,
-                        clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat
-                        justo dolore sit invidunt.</p>
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor
-                        invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam
-                        lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor
-                        rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor
-                        sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at
-                        lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at
-                        sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos.</p>
+                <div class="d-flex mb-3" >
+                    <small class="me-3"><i class="bi bi-bookmarks me-2"></i>{{learningResource.type_learningr}}</small>
+                    <small class="me-3"><i class="bi bi-bookmark-star-fill" style="width: 50px;"></i>{{learningResource.theme}}</small>
+                    <small ><i class="bi bi-calendar-date me-2" ></i>{{learningResource.creationdate_learningr}}</small>
+
+                    <div class="star-review" style="margin-left: 300px; width: 270px; ">
+                        <span class="star" *ngFor="let star of [1, 2, 3, 4, 5]; let i = index">
+                          <ng-container *ngIf="averageRatingScore >= i + 0.25">
+                            &#9733;
+                          </ng-container>
+                          <ng-container *ngIf="averageRatingScore < i + 0.25">
+                            &#9734;
+                          </ng-container>
+                        </span>
+                      </div>
+                      
                 </div>
+                <div class="mb-5">
+                    <h1 class="text-uppercase mb-4">{{ learningResource.title_learningr }}</h1>
+                    <img class="img-fluid w-100 rounded mb-5" src="{{learningResource.url_learningr}}" alt="">
+                    
+                    <p>{{ learningResource.desc_learningr }}</p>
+                  </div>
                 <!-- Blog Detail End -->
 
                 <!-- Comment List Start -->
                 <div class="mb-5">
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">3 Comments</h3>
-                    <div class="d-flex mb-4">
-                        <img src="../assets/img/user.jpg" class="img-fluid" style="width: 45px; height: 45px;">
-                        <div class="ps-3">
-                            <h6><a href="">John Doe</a> <small><i>01 Jan 2045</i></small></h6>
-                            <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore
-                                accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed eirmod</p>
-                            <button class="btn btn-sm btn-light">Reply</button>
-                        </div>
+                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4" >Comments</h3>
+                    <div class="d-flex mb-4" *ngFor="let review of reviews">
+                      <img src="../assets/img/blog-2.jpg" class="img-fluid" style="width: 45px; height: 45px;">
+                      <div class="ps-3">
+                        <h6><a href="">Anonymous</a>  
+                            <div class="star-reviews" style="margin-bottom: -10px;">
+                            <span class="stars" *ngFor="let star of [1, 2, 3, 4, 5]; let i = index">
+                                <ng-container *ngIf="+review.rating >= i + 0.5">
+                                &#9733;
+                                </ng-container>
+                                <ng-container *ngIf="+review.rating < i + 0.5">
+                                &#9734;
+                                </ng-container>
+                            </span>
+                            </div>
+                        </h6>
+                            <p>{{ review.comment }} </p>
+                           
+                                              
+                      </div>
                     </div>
-                    <div class="d-flex mb-4">
-                        <img src="../assets/img/user.jpg" class="img-fluid" style="width: 45px; height: 45px;">
-                        <div class="ps-3">
-                            <h6><a href="">John Doe</a> <small><i>01 Jan 2045</i></small></h6>
-                            <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore
-                                accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed eirmod</p>
-                            <button class="btn btn-sm btn-light">Reply</button>
-                        </div>
-                    </div>
-                    <div class="d-flex ms-5 mb-4">
-                        <img src="../assets/img/user.jpg" class="img-fluid" style="width: 45px; height: 45px;">
-                        <div class="ps-3">
-                            <h6><a href="">John Doe</a> <small><i>01 Jan 2045</i></small></h6>
-                            <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore
-                                accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed eirmod</p>
-                            <button class="btn btn-sm btn-light">Reply</button>
-                        </div>
-                    </div>
-                </div>
+                  </div>
+                  
                 <!-- Comment List End -->
 
-                <!-- Comment Form Start -->
-                <div class="bg-light rounded p-5">
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Leave a comment</h3>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-12 col-sm-6">
-                                <input type="text" class="form-control bg-white border-0" placeholder="Your Name" style="height: 55px;">
-                            </div>
-                            <div class="col-12 col-sm-6">
-                                <input type="email" class="form-control bg-white border-0" placeholder="Your Email" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <input type="text" class="form-control bg-white border-0" placeholder="Website" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <textarea class="form-control bg-white border-0" rows="5" placeholder="Comment"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Leave Your Comment</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <!-- Comment Form End -->
+<!-- Review Form Start -->
+<div class="bg-light rounded p-5">
+    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Leave a review</h3>
+    <form (ngSubmit)="addReview(learningResource.id_learningr)">
+      <div class="row g-3">
+        <div class="col-12">
+            <input  type="range" min="0" max="5" step="1" class="form-control-range" placeholder="Rating" style="color: gold;" [(ngModel)]="newReview.rating" name="rating">
+          </div>
+        <div class="col-12">
+          <textarea class="form-control bg-white border-0" rows="5" placeholder="Comment" [(ngModel)]="newReview.comment" name="comment"></textarea>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary w-100 py-3" type="submit">Submit Review</button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <!-- Review Form End -->
+  
+
             </div>
 
             <!-- Sidebar Start -->
@@ -184,47 +174,32 @@
 
                 <!-- Category Start -->
                 <div class="mb-5">
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Categories</h3>
+                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Themes</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>Web Design</a>
-                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>Web Development</a>
-                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>Web Development</a>
-                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>Keyword Research</a>
-                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>Email Marketing</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_TRAINING</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_BEHAVIOR</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_GROOMING</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_HEALTH_AND_WELLNESS</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_PRODUCTS_AND_ACCESSORIES</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>PET_INSURANCE</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>ANIMAL_RIGHTS_AND_WELFARE</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>VETERINARY_MEDICINE</a>
+                        <a class="h5 bg-light py-2 px-3 mb-2" href="#"><i class="bi bi-arrow-right me-2"></i>ANIMAL_PSYCHOLOGY</a>
                     </div>
                 </div>
                 <!-- Category End -->
 
-                <!-- Recent Post Start -->
-                <div class="mb-5">
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Recent Post</h3>
-                    <div class="d-flex overflow-hidden mb-3">
-                        <img class="img-fluid" src="../assets/img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                        <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
-                        </a>
+                    <!-- Recent Post Start -->
+                    <div class="mb-5"   >
+                        <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4"></h3>
+                        <div class="d-flex overflow-hidden mb-3" *ngFor="let lr of lrList">
+                            <img class="img-fluid" src="{{lr.url_learningr}}"  style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                            <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">{{lr.title_learningr}}
+                            </a>
+                        </div>
+                       
                     </div>
-                    <div class="d-flex overflow-hidden mb-3">
-                        <img class="img-fluid" src="../assets/img/blog-2.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                        <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
-                        </a>
-                    </div>
-                    <div class="d-flex overflow-hidden mb-3">
-                        <img class="img-fluid" src="../assets/img/blog-3.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                        <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
-                        </a>
-                    </div>
-                    <div class="d-flex overflow-hidden mb-3">
-                        <img class="img-fluid" src="../assets/img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                        <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
-                        </a>
-                    </div>
-                    <div class="d-flex overflow-hidden mb-3">
-                        <img class="img-fluid" src="../assets/img/blog-2.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                        <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
-                        </a>
-                    </div>
-                </div>
-                <!-- Recent Post End -->
+                    <!-- Recent Post End -->
 
                 <!-- Image Start -->
                 <div class="mb-5">
@@ -232,40 +207,41 @@
                 </div>
                 <!-- Image End -->
 
-                <!-- Tags Start -->
-                <div class="mb-5">
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Tag Cloud</h3>
-                    <div class="d-flex flex-wrap m-n1">
-                        <a href="" class="btn btn-primary m-1">Design</a>
-                        <a href="" class="btn btn-primary m-1">Development</a>
-                        <a href="" class="btn btn-primary m-1">Marketing</a>
-                        <a href="" class="btn btn-primary m-1">SEO</a>
-                        <a href="" class="btn btn-primary m-1">Writing</a>
-                        <a href="" class="btn btn-primary m-1">Consulting</a>
-                        <a href="" class="btn btn-primary m-1">Design</a>
-                        <a href="" class="btn btn-primary m-1">Development</a>
-                        <a href="" class="btn btn-primary m-1">Marketing</a>
-                        <a href="" class="btn btn-primary m-1">SEO</a>
-                        <a href="" class="btn btn-primary m-1">Writing</a>
-                        <a href="" class="btn btn-primary m-1">Consulting</a>
-                    </div>
+             <!-- Tags Start -->
+             <div class="mb-5">
+                <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Tag Cloud</h3>
+                <div class="d-flex flex-wrap m-n1">
+                    <a href="" class="btn btn-primary m-1">Design</a>
+                    <a href="" class="btn btn-primary m-1">Development</a>
+                    <a href="" class="btn btn-primary m-1">Marketing</a>
+                    <a href="" class="btn btn-primary m-1">SEO</a>
+                    <a href="" class="btn btn-primary m-1">Writing</a>
+                    <a href="" class="btn btn-primary m-1">Consulting</a>
+                    <a href="" class="btn btn-primary m-1">Design</a>
+                    <a href="" class="btn btn-primary m-1">Development</a>
+                    <a href="" class="btn btn-primary m-1">Marketing</a>
+                    <a href="" class="btn btn-primary m-1">SEO</a>
+                    <a href="" class="btn btn-primary m-1">Writing</a>
+                    <a href="" class="btn btn-primary m-1">Consulting</a>
                 </div>
-                <!-- Tags End -->
-
-                <!-- Plain Text Start -->
-                <div>
-                    <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Plain Text</h3>
-                    <div class="bg-light text-center" style="padding: 30px;">
-                        <p>Vero sea et accusam justo dolor accusam lorem consetetur, dolores sit amet sit dolor clita kasd justo, diam accusam no sea ut tempor magna takimata, amet sit et diam dolor ipsum amet diam</p>
-                        <a href="" class="btn btn-primary py-2 px-4">Read More</a>
-                    </div>
-                </div>
-                <!-- Plain Text End -->
             </div>
-            <!-- Sidebar End -->
+            <!-- Tags End -->
+
+            <!-- Plain Text Start -->
+            <div>
+                <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Plain Text</h3>
+                <div class="bg-light text-center" style="padding: 30px;">
+                    <p>Pet friendly resources available.</p>
+                    <a href="" class="btn btn-primary py-2 px-4">Read More</a>
+                </div>
+            </div>
+            <!-- Plain Text End -->
         </div>
+        <!-- Sidebar End -->
     </div>
-    <!-- Blog End -->
+</div>
+<!-- Blog End -->
+
 
 
     <!-- Footer Start -->
