--- a/src/app/components/admin-learning-resource/admin-learning-resource.component.html
+++ b/src/app/components/admin-learning-resource/admin-learning-resource.component.html
@@ -62,6 +62,9 @@
 
 </section>
 
+
+
+
 <!-- Add-->
 <section class="learning-resource">
 <section class="navbar navbar-expand-lg bg-body-tertiary">
@@ -254,7 +257,7 @@
         <td>{{lr.title_learningr}}</td>
         <td>{{lr.desc_learningr}}</td>
         <td>{{lr.type_learningr}}</td>
-        <td>{{lr.url_learningr}}</td>
+        <td><img class="img-fluid" src="{{lr.url_learningr}}"  style="width: 100px; height: 100px; object-fit: cover;" alt=""></td>
         <td>{{lr.theme}}</td>
         <td>{{lr.creationdate_learningr}}</td>
         <td>
