--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -46,7 +46,7 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a  (click)="gotoChatbot()"  class="nav-item nav-link ">PetBot</a>
                 <a (click)="gotoLRs()" class="nav-item nav-link">Learning Resources</a>
-                <a href="service.html" class="nav-item nav-link">Crowd Funding</a>
+                <a (click)="gotoCrowdFunding()" class="nav-item nav-link">Crowd Funding</a>
                 <a href="product.html" class="nav-item nav-link">Adoption Center</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
