--- a/src/app/components/admin-learning-resource/admin-learning-resource.component.html
+++ b/src/app/components/admin-learning-resource/admin-learning-resource.component.html
@@ -1,47 +1,9 @@
 
 
 
-
-<!-- Side bar-->
-<div class="sidebar">
-  <div class="admin-profile">
-   
-    <img src="../assets/admin/img/avatar5.png" alt="Admin Profile Picture" class="admin-pic">
-    <h2 class="admin-name">Administrator</h2>
-    <div class="online-status">
-      <div class="dot"></div>
-      <span class="online-text">Online</span>
-    </div>
-  </div>
-  <div class="sidebar-menu">
-    <ul>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Learning Resources</a></li>
-      <li><a href="#">Donations</a></li>
-      <li><a href="#">Pet Shop</a></li>
-      <li><a href="#">Pet Adoption</a></li>
-      <li><a href="#">Social Network</a></li>
-    </ul>
-  </div>
-</div>
-
-<!-- NavBar -->
-<nav class="navbari">
-  <div class="navbari-toggler">
-    <img class="navbari-icon" src="../assets/img/navi.png">
-  </div>
- 
- 
-  <div class="navbari-right">
-    <div class="notification-icon">
-      
-    </div>
-    <div class="logout-icon">
-      <i class="fa fa-power-off"></i>
-    </div>
-  </div>
- 
-</nav>
+<!--ADMIN NAV BAR-->
+<app-admin-nav-bar></app-admin-nav-bar>
+<!--ADMIN NAV BAR-->
 
 <!-- Charts  -->
 
