--- a/src/app/components/admin-donation/admin-donation.component.html
+++ b/src/app/components/admin-donation/admin-donation.component.html
@@ -1,48 +1,10 @@
 
+<!--ADMIN NAV BAR-->
+<app-admin-nav-bar></app-admin-nav-bar>
+<!--ADMIN NAV BAR-->
 
 
 
-<!-- Side bar-->
-<div class="sidebar">
-    <div class="admin-profile">
-     
-      <img src="../assets/img/user.jpg" alt="Admin Profile Picture" class="admin-pic">
-      <h2 class="admin-name">Administrator</h2>
-      <div class="online-status">
-        <div class="dot"></div>
-        <span class="online-text">Online</span>
-      </div>
-    </div>
-    <div class="sidebar-menu">
-      <ul>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Learning Resources</a></li>
-        <li><a href="admin-crowd-funding">Campaigns</a></li>
-        <li><a href="admin-donation">Donations</a></li>
-        <li><a href="#">Pet Shop</a></li>
-        <li><a href="#">Pet Adoption</a></li>
-        <li><a href="#">Social Network</a></li>
-      </ul>
-    </div>
-  </div>
-  
-  <!-- NavBar -->
-  <nav class="navbari">
-    <div class="navbari-toggler">
-      <img class="navbari-icon" src="../assets/img/team-1.jpg">
-    </div>
-   
-   
-    <div class="navbari-right">
-      <div class="notification-icon">
-        
-      </div>
-      <div class="logout-icon">
-        <i class="fa fa-power-off"></i>
-      </div>
-    </div>
-   
-  </nav>
 
   <!-- Add-->
   <section class="donations">
